--- a/src/app/pages/requests/requests.component.html
+++ b/src/app/pages/requests/requests.component.html
@@ -45,7 +45,7 @@
       </ng-template>
     </mat-tab>
   </mat-tab-group>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <table mat-table matSort [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="select">
       <th mat-header-cell *matHeaderCellDef>
         <mat-checkbox
@@ -68,13 +68,13 @@
     </ng-container>
     <!-- Position Column -->
     <ng-container matColumnDef="logTime">
-      <th mat-header-cell *matHeaderCellDef>Log Time</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Log Time</th>
       <td mat-cell *matCellDef="let element">{{ element.logTime }}</td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="requestID">
-      <th mat-header-cell *matHeaderCellDef>Request ID</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Request ID</th>
       <td mat-cell *matCellDef="let element">
         <button (click)="onClickTableCell(element)">
           {{ element.requestID }}
@@ -84,31 +84,27 @@
 
     <!-- Weight Column -->
     <ng-container matColumnDef="details">
-      <th mat-header-cell *matHeaderCellDef>Details</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Details</th>
       <td mat-cell *matCellDef="let element">{{ element.details }}</td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="poc">
-      <th mat-header-cell *matHeaderCellDef>POC</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>POC</th>
       <td mat-cell *matCellDef="let element">{{ element.poc }}</td>
     </ng-container>
 
     <ng-container matColumnDef="refPoc">
-      <th mat-header-cell *matHeaderCellDef>Ref. POC</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Ref. POC</th>
       <td mat-cell *matCellDef="let element">{{ element.refPoc }}</td>
     </ng-container>
     <ng-container matColumnDef="channel">
-      <th mat-header-cell *matHeaderCellDef>Channel</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Channel</th>
       <td mat-cell *matCellDef="let element">
         <mat-icon *ngIf="element.channel==='WhatsApp'" matTooltip="Whatsapp">message</mat-icon>
         <mat-icon *ngIf="element.channel==='Email'" matTooltip="Email">email</mat-icon>
         <mat-icon *ngIf="element.channel==='Call'" matTooltip="Phone Call">phone_alt</mat-icon>
       </td>
-    </ng-container>
-    <ng-container matColumnDef="volunteer">
-      <th mat-header-cell *matHeaderCellDef>Volunteer</th>
-      <td mat-cell *matCellDef="let element">{{ element.volunteer }}</td>
     </ng-container>
     <ng-container matColumnDef="priority">
       <th mat-header-cell *matHeaderCellDef>Priority</th>
