--- a/src/app/components/ticket-details/ticket-details.component.scss
+++ b/src/app/components/ticket-details/ticket-details.component.scss
@@ -48,3 +48,12 @@
   float: right;
   width: 25%;
 }
+
+.party, .organization {
+  float: left;
+  width: 33%;
+}
+.org-location {
+  float: right;
+  width: 33%;
+}
