--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -295,7 +295,7 @@
   <img
     width="40"
     alt="Angular Logo"
-    src="assets/logo.jpeg"
+    src="assets/collabhouse.png"
   />
   <!-- <span>Welcome</span> -->
   <a routerLink="/reports" routerLinkActive="active" mat-button>Dashboard</a>
