--- a/src/app/pages/tickets/tickets.component.html
+++ b/src/app/pages/tickets/tickets.component.html
@@ -30,8 +30,9 @@
       </mat-select>
     </mat-form-field>
     <mat-form-field class="margin-20">
-      <mat-label>Filter</mat-label>
+      <mat-label>Search tickets</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Ex. N95">
+      <mat-icon matSuffix>search</mat-icon>
     </mat-form-field>
   </div>
 </div>
