Updated theme colors

--- a/src/app/common/themes/my-theme.scss
+++ b/src/app/common/themes/my-theme.scss
@@ -3,30 +3,30 @@
 @include mat-core();
 
 $my-primary: (
-  50: #edf8f2,
-  100: #d2eddd,
-  200: #b4e1c7,
-  300: #95d4b1,
-  400: #7fcba0,
-  500: #68c28f,
-  600: #60bc87,
-  700: #55b47c,
-  800: #4bac72,
-  900: #3a9f60,
-  A100: #edfff4,
-  A200: #baffd3,
-  A400: #87ffb3,
-  A700: #6effa2,
+  50: #ede0fe,
+  100: #d2b3fe,
+  200: #b480fd,
+  300: #954dfc,
+  400: #7f26fb,
+  500: #6800fa,
+  600: #6000f9,
+  700: #5500f9,
+  800: #4b00f8,
+  900: #3a00f6,
+  A100: #ffffff,
+  A200: #edeaff,
+  A400: #c3b7ff,
+  A700: #ae9dff,
   contrast: (
     50: #000000,
     100: #000000,
     200: #000000,
-    300: #000000,
-    400: #000000,
+    300: #ffffff,
+    400: #ffffff,
     500: #ffffff,
-    600: #000000,
-    700: #000000,
-    800: #000000,
+    600: #ffffff,
+    700: #ffffff,
+    800: #ffffff,
     900: #ffffff,
     A100: #000000,
     A200: #000000,
@@ -36,35 +36,35 @@ $my-primary: (
 );
 
 $my-accent: (
-  50: #f0f3f7,
-  100: #dbe1ec,
-  200: #c3cde0,
-  300: #aab9d3,
-  400: #98aac9,
-  500: #869bc0,
-  600: #7e93ba,
-  700: #7389b2,
-  800: #697faa,
-  900: #566d9c,
-  A100: #ffffff,
-  A200: #cfdfff,
-  A400: #9cbcff,
-  A700: #83abff,
+  50: #e8e8e8,
+  100: #c5c5c5,
+  200: #9f9f9f,
+  300: #787878,
+  400: #5b5b5b,
+  500: #3e3e3e,
+  600: #383838,
+  700: #303030,
+  800: #282828,
+  900: #1b1b1b,
+  A100: #f07575,
+  A200: #eb4747,
+  A400: #ff0000,
+  A700: #e60000,
   contrast: (
     50: #000000,
     100: #000000,
     200: #000000,
-    300: #000000,
-    400: #000000,
+    300: #ffffff,
+    400: #ffffff,
     500: #ffffff,
-    600: #000000,
-    700: #000000,
+    600: #ffffff,
+    700: #ffffff,
     800: #ffffff,
     900: #ffffff,
     A100: #000000,
-    A200: #000000,
-    A400: #000000,
-    A700: #000000,
+    A200: #ffffff,
+    A400: #ffffff,
+    A700: #ffffff,
   ),
 );
 
