--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,7 @@
 <button mat-button (click)="makePayment()"> Make Payment </button>
+
+<div>
+    <input type="number" [(ngModel)]="finalAmount" style="padding-bottom: 10px;">
+    <h2 *ngIf="paypalLoad">Paypal button is loading</h2>
+    <div id="paypal-checkout-btn"></div>
+</div>
