--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -286,7 +286,7 @@
     }
   }
   a.active {
-    border-bottom: #68c28f 2px solid;
+    border-bottom: #3e3e3e 2px solid;
   }
 </style>
 
@@ -298,11 +298,11 @@
     src="assets/inspirit.png"
   />
   <!-- <span>Welcome</span> -->
-  <a routerLink="/home" routerLinkActive="active" mat-button>Product</a>
-  <a routerLink="/requests" routerLinkActive="active" mat-button>Curriculum</a>
-  <a routerLink="/tickets" routerLinkActive="active" mat-button>About</a>
-  <a routerLink="/tickets" routerLinkActive="active" mat-button>Download</a>
-  <a mat-button>Contact</a>  
+  <a routerLink="/products" routerLinkActive="active" mat-button>Product</a>
+  <a routerLink="/curriculum" routerLinkActive="active" mat-button>Curriculum</a>
+  <a routerLink="/about" routerLinkActive="active" mat-button>About</a>
+  <a routerLink="/download" routerLinkActive="active" mat-button>Download</a>
+  <a routerLink="/contact" routerLinkActive="active" mat-button>Contact</a>
   <div class="spacer"></div>
   <a routerLink="/login" routerLinkActive="active" mat-button *ngIf="!isAuthenticated">Sign in</a>
   <button mat-button (click)="logout()" *ngIf="isAuthenticated">Log out</button>
